unpackaged/main/default/objects/Contact/fields/Act_On_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Act_On_Lead_Score__c</fullName>
    <label>Act-On Lead Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>