unpackaged/main/default/objects/Contact/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Admissions</description>
    <label>Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advisees</relationshipName>
    <type>Lookup</type>
</CustomField>