unpackaged/main/default/objects/Contact/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arlington</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Columbus</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Indianapolis</fullName>
            </value>
            <value>
                <fullName>IT Team</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Nellis AFB</fullName>
            </value>
            <value>
                <fullName>Raleigh</fullName>
            </value>
            <value>
                <fullName>Sugar Land</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
                <isActive>false</isActive>
                <label>Las Vegas</label>
            </value>
            <value>
                <fullName>Live Online</fullName>
                <isActive>false</isActive>
                <label>Live Online</label>
            </value>
            <value>
                <fullName>Morrisville</fullName>
                <isActive>false</isActive>
                <label>Morrisville</label>
            </value>
            <value>
                <fullName>Provo</fullName>
                <isActive>false</isActive>
                <label>Provo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>