unpackaged/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed-Left Org</fullName>
            </value>
            <value>
                <fullName>Closed-Wrong Contact</fullName>
            </value>
            <value>
                <fullName>Closed-Not Interested</fullName>
            </value>
            <value>
                <fullName>Closed-Not Productive</fullName>
            </value>
            <value>
                <fullName>Closed-No Activity</fullName>
            </value>
            <value>
                <fullName>Closed-Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>