unpackaged/main/default/objects/Contact/fields/Do_Not_Contact_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact - Marketing</label>
    <type>Checkbox</type>
</CustomField>