unpackaged/main/default/objects/Contact/fields/Do_Not_Contact_PERIOD__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_PERIOD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact - PERIOD</label>
    <type>Checkbox</type>
</CustomField>