unpackaged/main/default/objects/Contact/fields/Emergency_Notification_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Notification_Number__c</fullName>
    <label>Emergency Notification Number</label>
    <type>Phone</type>
</CustomField>