unpackaged/main/default/objects/Contact/fields/Financial_aid_advisor__c.field-meta.xml
<CustomField>
    <fullName>Financial_aid_advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial aid advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advisees_Fin_Aid</relationshipName>
    <type>Lookup</type>
</CustomField>