unpackaged/main/default/objects/Contact/fields/First_Community_Login__c.field-meta.xml
<CustomField>
    <fullName>First_Community_Login__c</fullName>
    <description>Flow name: &quot;Batch - Community User: Set Last Login Datetime&quot;</description>
    <inlineHelpText>Represents when user first logins into the Gateway, directly after setting a password.  The field is updated by scheduled job, once a day.</inlineHelpText>
    <label>First Community Login</label>
    <type>DateTime</type>
</CustomField>