unpackaged/main/default/objects/Contact/fields/Previous_Military__c.field-meta.xml
<CustomField>
    <fullName>Previous_Military__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Business Contact has Previous Military Experience</description>
    <inlineHelpText>Indicates if the Business Contact has Previous Military Experience</inlineHelpText>
    <label>Previous Military?</label>
    <type>Checkbox</type>
</CustomField>